micronfig_macros/tests/sources/wrong_nonsense_3.stderr
error: expected identifier
 --> tests/sources/wrong_nonsense_3.rs:2:2
  |
2 |     ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
  |     ^
